<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">愛手工Isogon</string>
    <string name="app_name_Login">愛手工Isogon-會員登入</string>
    <string name="app_name_Addmember">愛手工Isogon-會員註冊</string>
    <string name="app_name_About">愛手工Isogon-手工緣起</string>
    <string name="app_name_salenews">愛手工Isogon-優惠訊息</string>
    <string name="app_name_store">愛手工Isogon-傳奇店家</string>
    <string name="app_name_prodclass">愛手工Isogon-線上購物</string>
    <string name="action_settings">Settings</string>
    <string name="about">手工緣起</string>
    <string name="salenews">優惠訊息</string>
    <string name="prodclass">線上購物</string>
    <string name="store">傳奇店家</string>
    <string name="addmember">加入會員</string>
    <string name="Login">會員登入</string>
    <string name="about2">執行單位：中華民國資訊軟體協會\n服務團隊：高雄市電腦商業同業公會\n合作廠商：易利華科技有限公司 </string>
    <string name="user">E-Mail：</string>
    <string name="passwd">密碼：</string>
    <string name="usermember">會員姓名：</string>
    <string name="sex">性別：</string>
    <string name="boy">帥哥</string>
    <string name="girl">美女</string>
    <string name="phone">電話：</string>
    <string name="fax">傳真：</string>
    <string name="cellphone">行動電話：</string>
    <string name="address">聯絡地址：</string>
    <string name="SendAddMember">送出</string>
    <string name="CloseMember">取消</string>
    <string name="Loginmember">登入</string>
    <string name="about3">2010年4月在易利華科技-林執行長的號召下，我們組成了『飛雁手工傳奇』社群，參加數位落差計劃，進行聯合行銷，成員企業們不但接受了許多行銷教育訓練，也參加了許多網路及實體的行銷活動。讓我們的數位能力提升許多，並體驗了優良的行銷活動帶給我們實際業績的成長！
        					\n更重要的是許許多多來自各縣市的網友、消費者給我們的肯定與讚美，讓我們這群微型手工創業者深受感動與鼓勵！在共同努力下，我們也在2010.11月榮獲中華軟協FaceBook行銷競賽，品質組全國第一名！
							\n民國100年起，我們將社群名稱改為『手工傳奇』，以符合未來的成長！並放寬未來平台成員加入的資格以讓更多手工創業者都有機會一起努力，今後不限制一定要婦女朋友，只要是手工創業者都可以加入，不分男性或女性，都是我們的好夥伴！
							\n藉由本次社群行銷深化的機會，不但擴大成只要手工創業者都可加入外，同時也建立了未來社群領導人產生的制度，使本社群組織得以邁向永續經營，為台灣手工業者建立一個共同的、優質的網路行銷平台！</string>
    <string name="back">回首頁</string>
    <string name="Next">下一頁</string>
    <string name="Go_Back">上一頁</string>
    <string name="ProdClass01">風味美食</string>
    <string name="ProdClass02">品味生活</string>
    <string name="ProdClass03">居家環保</string>
    <string name="ProdClass04">健康點心</string>
    <string name="ProdClass05">文化創藝</string>
    <string name="ProdClass06">精緻禮盒</string>
    <string name="StoreMarketplace">購買本店商品</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_activity_prodclass3">Activity_prodclass3</string>
    <string name="title_activity_activity_prodclass4">Activity_prodclass4</string>

</resources>